--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "appwrite": "^21.5.0",
+    "dotenv": "^17.2.3",
     "next": "16.0.7",
+    "node-appwrite": "^21.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
